fixed endpotins mising
