# backend/internal/model/label/model.go
@@ -1,7 +1,6 @@
 package label
 
 type Label struct {
-	ID         int    `json:"id" db:"id"`
-	Name       string `json:"name" db:"name" binding:"required"`
-	Department string `json:"department" db:"department" binding:"required"`
+	ID   int    `json:"id" db:"id"`
+	Name string `json:"name" db:"name" binding:"required"`
 }
