# backend/internal/model/report/dto.go
@@ -2,7 +2,6 @@ package report
 
 type CreateReportDTO struct {
 	Header string `json:"header" binding:"required"`
-	Department  string `json:"department" binding:"required"`
 	Body   string `json:"body"`
 }
 
@@ -10,7 +9,6 @@ type UpdateReportDTO struct {
 	ID     int
 	Header string `json:"header"`
 	Body   string `json:"body"`
-	Department  string `json:"department"`
 }
 
 type GetAllReportsDTO struct {
